# proto

./: Cargo.toml  README.md  build.rs  go.mod
daemonpb/: daemon.pb.go  daemonpb.go
heartbeatpb/: heartbeat.pb.go  heartbeatpb.go
networkpb/: network.pb.go  typ.pb.go
proto/: daemon.proto  heartbeat.proto  network.proto  raft.proto  typ.proto
raftpb/: raft.pb.go  raftpb.go
src/: daemonpb.rs  heartbeatpb.rs  lib.rs  pb.rs  raftpb.rs
